--- a/css/less/06-common-author-date-readmore.less
+++ b/css/less/06-common-author-date-readmore.less
@@ -5,7 +5,7 @@
 // --------------------------------------------------------------------
 
 // Date
-body .date {
+.date {
 	color: @color-copy-light;
 	.small();
 	text-transform: uppercase;
