--- a/css/less/06-common-clear-hide-float.less
+++ b/css/less/06-common-clear-hide-float.less
@@ -32,8 +32,8 @@
     
     // add margins
     &.margins {
-        margin-right: @blk-margin-width;
-        margin-bottom: @blk-margin-width;
+        margin-right: @blk-margin-right;
+        margin-bottom: @blk-margin-bottom;
     }
 }
 .right {
@@ -41,8 +41,8 @@
     
     // add margins
     &.margins {
-        margin-left: @blk-margin-width;
-        margin-bottom: @blk-margin-width;
+        margin-left: @blk-margin-left;
+        margin-bottom: @blk-margin-right;
     }
 }
 
