--- a/css/less/06-common-column-grid.less
+++ b/css/less/06-common-column-grid.less
@@ -7,23 +7,23 @@
 
 .columns2 {
     column-count: 2;
-    column-gap: (@blk-padding-width + @blk-border-width + @blk-margin-width) * 2;
+    column-gap: @blk-padding-border-margin-left + @blk-padding-border-margin-right;
 }
 .columns3 {
     column-count: 3;
-    column-gap: (@blk-padding-width + @blk-border-width + @blk-margin-width) * 2;
+    column-gap: @blk-padding-border-margin-left + @blk-padding-border-margin-right;
 }
 .columns4 {
     column-count: 4;
-    column-gap: (@blk-padding-width + @blk-border-width + @blk-margin-width) * 2;
+    column-gap: @blk-padding-border-margin-left + @blk-padding-border-margin-right;
 }
 .columns5 {
     column-count: 5;
-    column-gap: (@blk-padding-width + @blk-border-width + @blk-margin-width) * 2;
+    column-gap: @blk-padding-border-margin-left + @blk-padding-border-margin-right;
 }
 .columns6 {
     column-count: 6;
-    column-gap: (@blk-padding-width + @blk-border-width + @blk-margin-width) * 2;
+    column-gap: @blk-padding-border-margin-left + @blk-padding-border-margin-right;
 }
 
 
