--- a/css/less/06-common-image-gallery-video.less
+++ b/css/less/06-common-image-gallery-video.less
@@ -27,10 +27,10 @@
 .gallery {
 	img {
 		width: @blk-content-width * 2;
-		padding: @blk-padding-width;
+		padding: @blk-padding-top @blk-padding-right @blk-padding-bottom @blk-padding-left;
 		border: @blk-border-width solid @gray-light;
-		margin-right: @blk-margin-width;
-		margin-bottom: @blk-margin-width;
+		margin-right: @blk-margin-right;
+		margin-bottom: @blk-margin-left;
 	}
 }
 
