--- a/css/less/06-common-paragraph.less
+++ b/css/less/06-common-paragraph.less
@@ -50,8 +50,8 @@
 	margin: 1em 0;
 	padding:1em 0;
 	.big();
-	border-top: @blk-border-width solid @gray-light;
-	border-bottom: @blk-border-width solid @gray-light;
+	border-top: @blk-border-top solid @gray-light;
+	border-bottom: @blk-border-bottom solid @gray-light;
 }
 
 .hanging-punctuation {} // implemented with javascript
