--- a/css/less/10-lyquix.less
+++ b/css/less/10-lyquix.less
@@ -1,2 +1,6 @@
+// Lyquix - styles for Lyquix modules, plugins, etc.
+// --------------------------------------------------------------------
+
 @import (less) "10-lyquix-lyqbox.less";						// lyqbox styles
 @import (less,optional) "custom/10-lyquix-lyqbox.less";		// override
+
