--- a/css/less/04-blocks-size6.less
+++ b/css/less/04-blocks-size6.less
@@ -7,3 +7,34 @@
 @blk-margin-width: 				5px; 		// Size of margin around each block
 @blk-border-width: 				1px; 		// Size of borders around each block
 @blk-padding-width: 			4px; 		// Size of padding inside each block
+
+//Sizes for margins, borders, and padding for individual corners or sides of blocks
+
+@blk-margin-top-bottom: 	@blk-margin-width;
+@blk-border-top-bottom: 	@blk-border-width;
+@blk-padding-top-bottom: 	@blk-padding-width;
+
+// Left-Right
+@blk-margin-left-right: 	@blk-margin-width;
+@blk-border-left-right: 	@blk-border-width;
+@blk-padding-left-right: 	@blk-padding-width;
+
+// Top
+@blk-margin-top: 			@blk-margin-width;
+@blk-border-top: 			@blk-border-width;
+@blk-padding-top: 			@blk-padding-width;
+
+// Right
+@blk-margin-right: 			@blk-margin-width;
+@blk-border-right: 			@blk-border-width;
+@blk-padding-right: 		@blk-padding-width;
+
+// Bottom
+@blk-margin-bottom: 		@blk-margin-width;
+@blk-border-bottom: 		@blk-border-width;
+@blk-padding-bottom: 		@blk-padding-width;
+
+// Left
+@blk-margin-left: 			@blk-margin-width;
+@blk-border-left: 			@blk-border-width;
+@blk-padding-left: 			@blk-padding-width;
