--- a/css/less/11-responsive-container5.less
+++ b/css/less/11-responsive-container5.less
@@ -16,7 +16,7 @@
 
 body[screen=xs] {
 	.container {
-		width: (@blk5-width + @blk-padding-border-margin-width * 2);	// xs screen - 5 blocks
+		width: @blk5-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;	// xs screen - 5 blocks
 	}
 	
 	&.blkfluid-xs .container {
@@ -26,7 +26,7 @@ body[screen=xs] {
 
 body[screen=sm] {
 	.container {
-		width: (@blk10-width + @blk-padding-border-margin-width * 2);	// sm screen - 10 blocks
+		width: @blk10-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;	// sm screen - 10 blocks
 	}
 	
 	&.blkfluid-sm .container {
@@ -36,7 +36,7 @@ body[screen=sm] {
   
 body[screen=md] {
   .container {
-    width: (@blk15-width + @blk-padding-border-margin-width * 2); // md screen - 15 blocks
+    width: @blk15-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // md screen - 15 blocks
   }
   
   &.blkfluid-md .container {
@@ -46,7 +46,7 @@ body[screen=md] {
 
 body[screen=lg] {
   .container {
-    width: (@blk20-width + @blk-padding-border-margin-width * 2); // lg screen - 20 blocks
+    width: @blk20-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // lg screen - 20 blocks
   }
   
   &.blkfluid-lg .container {
@@ -56,7 +56,7 @@ body[screen=lg] {
   
 body[screen=xl] { 
   .container {
-    width: (@blk25-width + @blk-padding-border-margin-width * 2); // xl screen - 25 blocks
+    width: @blk25-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // xl screen - 25 blocks
   }
   
   &.blkfluid-xl .container {
