Update: base css/js files

--- a/css/less/01-normalize.less
+++ b/css/less/01-normalize.less
@@ -1,4 +1,15 @@
-//! based on normalize.css
+/**
+ * 01-normalize.less - Normalize CSS styles for consistent cross-browser experience
+ *
+ * Based on https://github.com/necolas/normalize.css
+ *
+ * @version     1.0.1
+ * @package     tpl_lyquix
+ * @author      Lyquix
+ * @copyright   Copyright (C) 2015 - 2017 Lyquix
+ * @license     GNU General Public License version 2 or later
+ * @link        https://github.com/Lyquix/tpl_lyquix
+ */
 
 html {
 	font-family: sans-serif;
@@ -15,6 +26,11 @@ html {
     -webkit-overflow-scrolling: touch;
     // font antialiasing on webskit browsers
     -webkit-font-smoothing: antialiased;
+    // correct line height
+    line-height: 1.15;
+    // prevent font size adjustement in Windows Phone and iOS
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 // Remove default margin.
@@ -183,6 +199,8 @@ figure {
 hr {
 	-moz-box-sizing: content-box;
 	box-sizing: content-box;
+	height: 0;
+	overflow: visible;
 }
 
 // Contain overflow in all browsers.
