--- a/css/editor.css
+++ b/css/editor.css
@@ -1,5 +1,5 @@
 /**
- * editor.css - Styles for Joomla editor
+ * editor.css - Styles for WordPress editor
  *
  * @version     2.0.0
  * @package     wp_lyquix_theme
