--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Lyquix
 Theme URI: https://github.com/Lyquix/wp_theme_lyquix
 Author:  Lyquix
 Author URI: https://www.lyquix.com/
-Description: Lyquix WordPress Theme is a port of the Lyquix Joomla Template https://github.com/Lyquix/wp_lyquix_theme
+Description: Lyquix WordPress Theme 2.x
 Version: 2.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
