--- a/css/ie-alert.css
+++ b/css/ie-alert.css
@@ -2,11 +2,11 @@
  * ie-alert.css - Styles for IE9 alert box
  *
  * @version     2.0.0
- * @package     wp_lyquix_theme
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2018 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/wp_lyquix_theme
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
  .ie-alert {
