--- a/fonts/almost7/almost7.css
+++ b/fonts/almost7/almost7.css
@@ -2,11 +2,11 @@
  * still-6-but-almost-7.css - Changes all fonts to use Still 6 But Almost 7
  *
  * @version     2.0.0
- * @package     wp_lyquix_theme
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2018 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/wp_lyquix_theme
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 @font-face {
